# ModA-D-WF0

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  run.py
mymodel/: __init__.py  config.py  reporting.py
mymodel/strategies/: __init__.py  stub.py
